Fix mute/unmute for Phonon video backend

BUG: 443556